# lore

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: dco.yml  docker-release.yml  lint.yml  pr-validate.yml  publish-docs.yml  terraform-aws-example.yml
docs/: .pages  README.md  faq.md  glossary.md  roadmap.md
docs/how-to/: deploy-local-lore-server.md  install-lore-cli.md
docs/proposals/: 2026-05-03-modified-file-tracking.md  2026-06-18-oidc-auth-service.md  2026-06-21-changesets.md  2026-07-11-revision-show-command.md  2026-07-24-tokio-runtime-split-and-async-io.md  README.md
docs/reference/: README.md  lore-cli-commands.md  lore-cli-config.md
docs/tutorials/: README.md  add-unreal-project.md  auth-mtls.md  auth-none.md  loreignore.md  setup-identity.md
examples/aws/: README.md  compute.tf  iam.tf  main.tf  network.tf  outputs.tf  storage.tf  terraform.tfvars.example  tls.tf  variables.tf
lore/: build.rs  cbindgen.toml
lore-aws/src/: dynamodb.rs
lore-base/: build.rs
lore-base/src/: runtime.rs
lore-capi/: lore.h
lore-chaos-client/src/: operations.rs
lore-drive/: Cargo.toml  HANDOFF.md  REST_API.md
lore-drive/frontend/: .gitignore  README.md  e2e.mjs  package-lock.json  package.json  svelte.config.js  vite.config.js
lore-drive/frontend/src/: app.html
lore-drive/frontend/src/lib/: api.js
lore-drive/frontend/src/routes/: +layout.js  +page.svelte
lore-drive/src/: main.rs  props.rs
lore-drive/tests/hurl/: drive.hurl  replace.hurl  run.sh
lore-drive/tests/hurl/fixtures/folder1/: file1
lore-drive/tests/hurl/fixtures2/folder1/: file1
lore-integration-tests/src/: remote_store_test.rs  storage_mutable_test.rs  storage_remote_test.rs  storage_test.rs
lore-proto/tests/: v1_thin_client.rs
lore-revision/src/: branch.rs  commit.rs  event.rs  global.rs  interface.rs  link.rs  nametable.rs  node.rs  repository.rs  stage.rs  state.rs
lore-revision/tests/: merge.rs  nested_repository.rs  reverted_directory.rs
lore-server/: Cargo.toml  DOCKER.md  build.rs
lore-server/src/: server.rs  settings.rs
lore-storage/: Cargo.toml
lore-storage/benches/: chunking.rs
lore-storage/src/: fragment_engine.rs  maintenance.rs
lore-transport/src/: error.rs  session.rs
lore-web/: .gitignore  README.md  start.bat
lore-web/server/: cli.mjs  index.mjs  loreignore.mjs  sdk.mjs  start.mjs  store.mjs  transforms.mjs
lore-web/test/: loreignore.test.mjs  transforms.test.mjs
lore-web/web/: app.js  index.html  style.css
lore/src/: auth.rs  branch.rs  call.rs  call_delegation.rs  file.rs  interface.rs  lib.rs  log.rs  remote.rs  repository.rs  revision.rs  service.rs
lore/tests/: dispatch_runtime.rs  remote_message.rs
scripts/: install.ps1  install.sh
scripts/test/: conftest.py  error_types.py  lore.py  test_branch_metadata.py  test_conflict.py  test_merge_into.py  test_metadata.py  test_repository_metadata.py  test_revision_metadata.py  test_service.py  test_sync.py
(+111 files in other folders)
