[package]
name = "lore-drive"
version = "0.1.0"
edition = "2024"
description = "Axum/Tokio REST backend that exposes a lore workspace as a browsable file tree"

[[bin]]
name = "lore-drive"
path = "src/main.rs"

[dependencies]
# HTTP server — multipart powers POST /api/v1/upload
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
tower-http = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
# Lore library — workspace + revision internals
lore = { workspace = true }
lore-revision = { workspace = true }
lore-base = { workspace = true }
# CLI
clap = { workspace = true }
# Error handling
anyhow = { workspace = true }
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Downloads: CAS fetch staging + folder ZIP assembly
tempfile = { workspace = true }
zip = { workspace = true }
